--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 24px;
 }
 .wrapper {
-  width: 1157px;
+  width: 1160px;
   margin: auto;
 }
 .visually-hidden{
@@ -407,12 +407,13 @@ body {
   text-transform: uppercase;
 }
 .address-container {
+
   box-sizing: border-box;
   position: absolute;
   top: 55px;
   left: 51px;
   display: block;
-  background-color: #fff;
+  background-color: #ffffff;
   width: 319px;
   height: 308px;
   z-index: 30;
@@ -745,6 +746,7 @@ body {
   width: 260px;
   height: 50px;
   border: none;
+  outline: none;
   color: #000000;
   background-color: #eeeeee;
 }
@@ -758,7 +760,7 @@ body {
   /*color: #000000;*/
   color: rgba(0, 0, 0, 0.3);
   background-color: #d5d5d5;
-  border: none;
+  outline: none;
 }
 .filter-item{
   width: 322px;
@@ -970,7 +972,7 @@ body {
 .radio-input{
   position: absolute;
 
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
 
   appearance: none;
 }
@@ -1020,7 +1022,7 @@ body {
 }
 .check-input{
   position: absolute;
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   appearance: none;
 }
 .check-box{
